# dsagent

./: .gitignore  AGENTIC_LAYER.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  EXECUTION_EVAL.md  LICENSE  README.md  benchmark_suite.py  engagement_pilot.py  lalonde_pilot.py  pyproject.toml  requirements.txt  schema_benchmark.py
demo/: fixtures.py  run_agent.py  run_demo.py  run_eval.py  test_agent.py  test_core.py  test_exec_eval.py  test_planner.py  test_skills.py  test_sql_agent.py
dsagent/: __init__.py  __main__.py  benchmark_suite.py  catalog.py  dialects.py  graph.py  ontology.py  pipeline.py  planner.py  profiling.py  types.py
dsagent/agents/: __init__.py  critic.py  data_agent.py  foundation.py  modeling.py  planner_agent.py  sql_author.py  trust_report.py
dsagent/data/: __init__.py
dsagent/eval/: __init__.py  harness.py  scenarios.py
dsagent/execution/: __init__.py  datagen.py  estimand.py  estimators.py  executor.py  ml.py  viz.py
dsagent/llm/: __init__.py  anthropic_client.py  base.py  gemini_client.py  openai_client.py  stub.py
dsagent/planning/: __init__.py  adaptive.py  orchestrator.py  plangraph.py
dsagent/runtime/: __init__.py  blackboard.py  budget.py  orchestrator.py  tools.py
dsagent/skills/: __init__.py  base.py  library.py
dsagent/sql/: __init__.py  complexity.py  gates.py  lineage.py  nl2sql.py  parser.py  schema_linker.py  tokenizer.py  validate.py
