[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dsagent"
version = "3.3.0"
description = "Autonomous data-science agent: plans, fits, gates, and ships causal analyses."
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Dialect-perfect, column-level SQL lineage (auto-detected if installed)
sql = ["sqlglot>=23"]
# Live LLM uses stdlib urllib by default; the official SDK is optional
llm = ["anthropic>=0.40"]
# Warehouse drivers (install the ones you use)
warehouse = ["snowflake-connector-python", "google-cloud-bigquery", "duckdb"]

[project.scripts]
dsagent = "dsagent.__main__:main"

[tool.setuptools.packages.find]
include = ["dsagent*"]
